--- a/ResNet/train.ipynb
+++ b/ResNet/train.ipynb
@@ -16,7 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ln -s /content/gdrive/My\\ Drive/ /mydrive"
+    "!ln -s /content/gdrive/My\\ Drive/ /mydrive\n",
+    "%cd /mydrive"
    ]
   },
   {
@@ -47,6 +48,8 @@
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
     "import h5py\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt \n",
     "import tensorflow as tf\n",
     "import math\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -60,8 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data import traffic_sign_dataset\n",
-    "data, labels = traffic_sign_dataset()"
+    "%cd /mydrive/CNN_Architectures-Tensorflow-/ResNet/datasets\n",
+    "os.chdir('/mydrive/CNN_Architectures-Tensorflow-/ResNet/datasets/traffic_signs_dataset')\n",
+    "cur_path = os.getcwd()"
    ]
   },
   {
@@ -70,14 +74,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def load_traffic_sign_data():\n",
-    "#     data = np.load('./datasets/traffic_signs_dataset/Training/data.npy')\n",
-    "#     labels = np.load('./datasets/traffic_signs_dataset/Training/target.npy')\n",
-    "#     X_train, X_test, y_train, y_test = train_test_split(data, labels, test_size = 0.2, random_state = 0)\n",
-    "#     print(X_train.shape, X_test.shape, y_train.shape, y_test.shape) \n",
-    "#     y_train = to_categorical(y_train,43) \n",
-    "#     y_test = to_categorical(y_test,43)\n",
-    "#     return X_train, X_test, y_train, y_test\n",
+    "from PIL import Image\n",
+    "data =[]\n",
+    "labels = []\n",
+    "classes = 43\n",
+    "for i in range(classes):     \n",
+    "  path = os.path.join(cur_path,'Train', str(i))     \n",
+    "  images = os.listdir(path)\n",
+    "  for a in images:\n",
+    "      try:             \n",
+    "          image = Image.open(path +'/'+ a)             \n",
+    "          image = image.resize((64,64)) \n",
+    "          # Resizing all images into 30*30                                                 \n",
+    "          image =np.array(image)             \n",
+    "          data.append(image)             \n",
+    "          labels.append(i)\n",
+    "      except Exception as e:\n",
+    "          print(e)\n",
+    "data = np.array(data) \n",
+    "labels = np.array(labels)\n",
+    "print(data.shape, labels.shape)\n",
+    "os.mkdir('Training')\n",
+    "np.save('./Training/data', data)\n",
+    "np.save('./Training/target', labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.load('Training/data.npy')\n",
+    "labels = np.load('Training/target.npy')\n",
     "X_train, X_test, y_train, y_test = train_test_split(data, labels, test_size = 0.2, random_state = 0)\n",
     "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape) \n",
     "y_train = to_categorical(y_train,43) \n",
@@ -119,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, epochs = 20, batch_size = 32, validation_data = (X_test, y_test))"
+    "history = model.fit(X_train, y_train, epochs = 20, batch_size = 32, validation_data = (X_test, y_test))"
    ]
   },
   {
@@ -130,8 +159,8 @@
    "source": [
     "#plot accuracy\n",
     "plt.figure(0)\n",
-    "plt.plot(model.history['accuracy'], label = 'training accuracy')\n",
-    "plt.plot(model.history['val_accuracy'], label = 'val accuracy')\n",
+    "plt.plot(historymodel.history['accuracy'], label = 'training accuracy')\n",
+    "plt.plot(history.history['val_accuracy'], label = 'val accuracy')\n",
     "plt.title('Accuracy')\n",
     "plt.xlabel('epochs')\n",
     "plt.ylabel('accuracy')\n",
@@ -146,12 +175,146 @@
    "outputs": [],
    "source": [
     "#plot loss\n",
-    "plt.plot(model.history['loss'], label = 'training loss')\n",
-    "plt.plot(model.history['val_loss'], label = 'val loss')\n",
+    "plt.plot(history.history['loss'], label = 'training loss')\n",
+    "plt.plot(history.history['val_loss'], label = 'val loss')\n",
     "plt.title('Loss')\n",
     "plt.xlabel('epochs')\n",
     "plt.ylabel('loss')\n",
     "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def testing(testcsv):\n",
+    "    y_test = testcsv\n",
+    "    label = y_test[\"ClassId\"].values\n",
+    "    imgs = y_test[\"Path\"].values\n",
+    "    data=[]\n",
+    "    for img in imgs:\n",
+    "        image = Image.open(img)\n",
+    "        image = image.resize((30,30))\n",
+    "        data.append(np.array(image))\n",
+    "    X_test=np.array(data)\n",
+    "    return X_test,label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /mydrive/CNN_Architectures-Tensorflow-/ResNet/datasets\n",
+    "path = os.path.join('traffic_signs_dataset')\n",
+    "y_test = pd.read_csv('traffic_signs_dataset/Test.csv')\n",
+    "label = y_test[\"ClassId\"].values\n",
+    "imgs = y_test[\"Path\"].values\n",
+    "data=[]\n",
+    "for img in imgs:\n",
+    "  image = Image.open(path + '/' + img)\n",
+    "  image = image.resize((64,64))\n",
+    "  data.append(np.array(image))\n",
+    "X_test=np.array(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_x=model.predict(X_test) \n",
+    "classes_x=np.argmax(predict_x,axis=1)\n",
+    "classes_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "print(accuracy_score(label, classes_x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"./model/model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Classes of trafic signs\n",
+    "classes = { 0:'Speed limit (20km/h)',\n",
+    "            1:'Speed limit (30km/h)', \n",
+    "            2:'Speed limit (50km/h)', \n",
+    "            3:'Speed limit (60km/h)', \n",
+    "            4:'Speed limit (70km/h)', \n",
+    "            5:'Speed limit (80km/h)', \n",
+    "            6:'End of speed limit (80km/h)', \n",
+    "            7:'Speed limit (100km/h)', \n",
+    "            8:'Speed limit (120km/h)', \n",
+    "            9:'No passing', \n",
+    "            10:'No passing veh over 3.5 tons', \n",
+    "            11:'Right-of-way at intersection', \n",
+    "            12:'Priority road', \n",
+    "            13:'Yield', \n",
+    "            14:'Stop', \n",
+    "            15:'No vehicles', \n",
+    "            16:'Veh > 3.5 tons prohibited', \n",
+    "            17:'No entry', \n",
+    "            18:'General caution', \n",
+    "            19:'Dangerous curve left', \n",
+    "            20:'Dangerous curve right', \n",
+    "            21:'Double curve', \n",
+    "            22:'Bumpy road', \n",
+    "            23:'Slippery road', \n",
+    "            24:'Road narrows on the right', \n",
+    "            25:'Road work', \n",
+    "            26:'Traffic signals', \n",
+    "            27:'Pedestrians', \n",
+    "            28:'Children crossing', \n",
+    "            29:'Bicycles crossing', \n",
+    "            30:'Beware of ice/snow',\n",
+    "            31:'Wild animals crossing', \n",
+    "            32:'End speed + passing limits', \n",
+    "            33:'Turn right ahead', \n",
+    "            34:'Turn left ahead', \n",
+    "            35:'Ahead only', \n",
+    "            36:'Go straight or right', \n",
+    "            37:'Go straight or left', \n",
+    "            38:'Keep right', \n",
+    "            39:'Keep left', \n",
+    "            40:'Roundabout mandatory', \n",
+    "            41:'End of no passing', \n",
+    "            42:'End no passing veh > 3.5 tons' }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot,prediction = test_on_img(r'/mydrive/CNN_Architectures-Tensorflow-/ResNet/datasets/traffic_signs_dataset/Test/00100.png')\n",
+    "s = [str(i) for i in prediction] \n",
+    "a = int(\"\".join(s)) \n",
+    "print(\"Predicted traffic sign is: \", classes[a])\n",
+    "plt.imshow(plot)\n",
     "plt.show()"
    ]
   }
